Add JUnit 4 compatibility for IntelliJ runner